--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" type="text/css" href="./vendor/rappid.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/style.modern.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.dark.css" />
+
   </head>
 
   <body>
@@ -35,6 +37,6 @@
     <![endif]-->
 
     <!-- Application files:  -->
-    <script src="./dist/bundle.js"></script>
+    <script src="./dist/bundle3.js"></script>
   </body>
 </html>
