--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>State Machine Builder</title>
+    <title>Workflow Builder</title>
 
     <link rel="stylesheet" type="text/css" href="./vendor/rappid.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
